Thu Jul 31 20:35:32 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add
	  WIN32OLE_RECORD#ole_instance_variable_set and
	  WIN32OLE_RECORD#ole_instance_variable_get

Wed Jul 30 23:28:10 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* sprintf.c (rb_str_format): like r47006, get rid of
	  function calls in RSTRING_PTR().

Wed Jul 30 22:10:29 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* process.c (rlimit_resource_type, rlimit_resource_value):
	  get rid of inadvertent dynamic symbol pin-down.

	* re.c (match_backref_number): ditto.

	* signal.c (esignal_init, rb_f_kill, trap_signm): ditto.

	* transcode.c (econv_opts): ditto.

	* vm_trace.c (symbol2event_flag): ditto.

Wed Jul 30 21:29:39 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): pass WIN32OLE_RECORD variant
	  by reference when invoke OLE methods at first.

	* ext/win32ole/win32ole.c (olerecord_set_ivar): release
	  IRecordInfo interface before setting another IRecordInfo interface.

Wed Jul 30 13:17:35 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove unused macros.

Tue Jul 29 22:21:37 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (hash2olerec): ignore WIN32OLE_RECORD
	  instance variable if the variable is nil.

Tue Jul 29 19:43:27 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (folerecord_method_missing): refactoring.
	  divide functionality of folerecord_method_missing into
	  olerecord_ivar_set and olerecord_ivar_get.

Mon Jul 28 20:20:08 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win23ole.c (folerecord_method_missing): support
	  setter of member of WIN32OLE_RECORD object.

Mon Jul 28 06:37:19 2014  Zachary Scott  <e@zzak.io>

	* vm_eval.c: [DOC] Fix rdoc formatting of patch from [Bug #9551]

Mon Jul 28 06:34:43 2014  Zachary Scott  <e@zzak.io>

	* vm_eval.c: [DOC] [Bug #9551] Improve clarity of Kernel::catch